--- a/views/layouts/head.ejs
+++ b/views/layouts/head.ejs
@@ -67,6 +67,8 @@
     <!-- json editor -->
     <script src="/node_modules/@json-editor/json-editor/dist/jsoneditor.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/json2csv"></script>
+
     <script src="/js/common.js"></script>
 
     <%- defineContent('scripts') %>
