--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -216,5 +216,14 @@
                 <p>予約</p>
             </a>
         </li>
+
+        <% if (process.env.USE_ACCOUNTING_REPORTS === '1') { %>
+        <li class="nav-item <%= (displayId === 'AR-00') ? 'active': ''; %>">
+            <a class="nav-link" href="/projects/<%= req.project.id %>/accountingReports">
+                <i class="material-icons">summarize</i>
+                <p>経理レポート</p>
+            </a>
+        </li>
+        <% } %>
     </ul>
 </div>
