- 経理レポート検索を実装

--- a/views/accountingReports/_dataTables.ejs
+++ b/views/accountingReports/_dataTables.ejs
@@ -15,6 +15,14 @@
                         </div>
 
                         <div class="form-group bmd-form-group col-md-2">
+                            <label for="paymentMethodId" class="bmd-label-static">
+                                決済方法ID
+                            </label>
+                            <input type="text" class="form-control" name="paymentMethodId" id="paymentMethodId"
+                                placeholder="決済方法ID" />
+                        </div>
+
+                        <div class="form-group bmd-form-group col-md-2">
                             <label class="bmd-label-static"></label>
 
                             <div class="form-check form-check-inline">
