- 経理レポート検索を実装 - 日時表記にタイムゾーンを追加

--- a/views/events/screeningEventSeries/index.ejs
+++ b/views/events/screeningEventSeries/index.ejs
@@ -116,8 +116,8 @@ Aa-3
                                     <td name="name.ja|slice">
                                         $name.ja$
                                     </td>
-                                    <td name="startDate|date:YYYY-MM-DD HH:mm:ss">$startDate$</td>
-                                    <td name="endDate|date:YYYY-MM-DD HH:mm:ss">$endDate$</td>
+                                    <td name="startDate|date:YY-MM-DD HH:mm:ssZ">$startDate$</td>
+                                    <td name="endDate|date:YY-MM-DD HH:mm:ssZ">$endDate$</td>
                                     <td name="videoFormatName__videoFormatName|slice">
                                         <a href="javascript:void(0)" title="$videoFormatName$">$videoFormatName$</a>
 
