--- a/views/orders/_dataTables.ejs
+++ b/views/orders/_dataTables.ejs
@@ -132,7 +132,7 @@
                                     $orderNumber$
                                 </a>
                             </td>
-                            <td name="orderDate|date:YY-MM-DD HH:mm:ss">
+                            <td name="orderDate|date:YY-MM-DD HH:mm:ssZ">
                                 $orderDate$
                             </td>
                             <td name="orderStatus">
@@ -141,7 +141,7 @@
                             <td name="confirmationNumber">
                                 $confirmationNumber$
                             </td>
-                            <td name="dateReturned|date:YY-MM-DD HH:mm:ss">
+                            <td name="dateReturned|date:YY-MM-DD HH:mm:ssZ">
                                 $dateReturned$
                             </td>
                             <td name="orderNumber__customer.name|slice:10">
