--- a/views/accountingReports/_dataTables.ejs
+++ b/views/accountingReports/_dataTables.ejs
@@ -39,6 +39,47 @@
                         </div>
                     </div>
 
+                    <div class="form-row">
+
+                        <div class="form-group bmd-form-group col-md-4">
+                            <label for="orderFrom" class="bmd-label-static">
+                                注文日
+                            </label>
+
+                            <div class="input-group">
+                                <input class="form-control datepicker" placeholder="" maxlength=10
+                                    name="orderFrom" id="orderFrom" value="" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">から</span>
+                                </div>
+                                <input class="form-control datepicker" placeholder="" maxlength=10
+                                    name="orderThrough" id="orderThrough" valufe="" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">まで</span>
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group bmd-form-group col-md-4">
+                            <label for="orderFrom" class="bmd-label-static">
+                                予約イベント開始日
+                            </label>
+
+                            <div class="input-group">
+                                <input class="form-control datepicker" placeholder="" maxlength=10
+                                    name="reservationForStartFrom" id="reservationForStartFrom" value="" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">から</span>
+                                </div>
+                                <input class="form-control datepicker" placeholder="" maxlength=10
+                                    name="reservationForStartThrough" id="reservationForStartThrough" valufe="" />
+                                <div class="input-group-append">
+                                    <span class="input-group-text">まで</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="advanced collapse">
                     </div>
                 </form>
