--- a/views/actions/_dataTables.ejs
+++ b/views/actions/_dataTables.ejs
@@ -112,10 +112,10 @@
                             <td class="actionStatus" name="actionStatus">
                                 $actionStatus$
                             </td>
-                            <td name="startDate|date:YY-MM-DD HH:mm">
+                            <td name="startDate|date:YY-MM-DD HH:mm:ssZ">
                                 $startDate$
                             </td>
-                            <td name="endDate|date:YY-MM-DD HH:mm">
+                            <td name="endDate|date:YY-MM-DD HH:mm:ssZ">
                                 $endDate$
                             </td>
                             <td name="id__agent__agent.typeOf">
