--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -172,22 +172,22 @@ Aa-4
                                     <td name="location.name.ja|slice">
                                         $location.name.ja$
                                     </td>
-                                    <td name="startDate|date:YY/MM/DD HH:mm">$startDate$</td>
-                                    <td name="endDate|date:YY/MM/DD HH:mm">$endDate$</td>
+                                    <td name="startDate|date:YY-MM-DD HH:mm:ssZ">$startDate$</td>
+                                    <td name="endDate|date:YY-MM-DD HH:mm:ssZ">$endDate$</td>
                                     <td name="remainingAttendeeCapacity__maximumAttendeeCapacity">
                                         $remainingAttendeeCapacity$ / $maximumAttendeeCapacity$</td>
                                     <td
-                                        name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.reservationCount">
+                                        name="aggregateReservation.aggregateDate|date:YY-MM-DD HH:mm:ssZ__aggregateReservation.reservationCount">
                                         <a href="javascript:void(0)"
                                             title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.reservationCount$</a>
                                     </td>
                                     <td
-                                        name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.checkInCount">
+                                        name="aggregateReservation.aggregateDate|date:YY-MM-DD HH:mm:ssZ__aggregateReservation.checkInCount">
                                         <a href="javascript:void(0)"
                                             title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.checkInCount$</a>
                                     </td>
                                     <td
-                                        name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.attendeeCount">
+                                        name="aggregateReservation.aggregateDate|date:YY-MM-DD HH:mm:ssZ__aggregateReservation.attendeeCount">
                                         <a href="javascript:void(0)"
                                             title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.attendeeCount$</a>
                                     </td>
