--- a/views/offers/_dataTables.ejs
+++ b/views/offers/_dataTables.ejs
@@ -161,7 +161,7 @@
                                 </a>
                             </td>
                             <td
-                                name="validFrom|date:YY-MM-DD HH:mm:ss__validThrough|date:YY-MM-DD HH:mm:ss">
+                                name="validFrom|date:YY-MM-DD HH:mm:ssZ__validThrough|date:YY-MM-DD HH:mm:ssZ">
                                 $validFrom$ ~ $validThrough$
                             </td>
                             </td>
