--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -283,7 +283,7 @@
                                     $reservationNumber$
                                 </a>
                             </td>
-                            <td name="bookingTime|date:YY-MM-DD HH:mm:ss">
+                            <td name="bookingTime|date:YY-MM-DD HH:mm:ssZ">
                                 $bookingTime$
                             </td>
                             <td class="reservationStatusTypeName"
@@ -291,7 +291,7 @@
                                 <a href="#"
                                     title="$previousReservationStatus$ -> $reservationStatus$">$reservationStatusTypeName$</a>
                             </td>
-                            <td name="reservationFor.id__reservationFor.startDate|date:YY-MM-DD HH:mm">
+                            <td name="reservationFor.id__reservationFor.startDate|date:YY-MM-DD HH:mm:ssZ">
                                 $reservationFor.id$<br>
                                 $reservationFor.startDate$
                             </td>
