- 予約CSVダウンロードを実装

--- a/views/reservations/index.ejs
+++ b/views/reservations/index.ejs
@@ -23,6 +23,8 @@ Aa-11
                 <i class="material-icons">filter_list</i> 高度な検索</a>
             <a class="btn btn-primary btn-cancel disabled" href="#">
                 <i class="material-icons">cancel</i> キャンセル</a>
+            <a class="btn btn-primary btn-downloadCSV" href="#">
+                <i class="material-icons">download</i> CSV</a>
         </div>
 
         <%- include('./_dataTables', {  }) %>
