--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -210,6 +210,17 @@
             </a>
         </li>
 
+        <% if (process.env.USE_CUSTOMERS === '1' 
+            && typeof user.profile['cognito:username'] === 'string'
+            && user.profile['cognito:username'].slice(0, 6) === 'Google') { %>
+        <li class="nav-item <%= (displayId === 'CU-01') ? 'active': ''; %>">
+            <a class="nav-link" href="/projects/<%= req.project.id %>/customers">
+                <i class="material-icons">groups</i>
+                <p>顧客</p>
+            </a>
+        </li>
+        <% } %>
+
         <li class="nav-item <%= (displayId === 'Aa-11') ? 'active': ''; %>">
             <a class="nav-link" href="/projects/<%= req.project.id %>/reservations">
                 <i class="material-icons">event_seat</i>
