- 注文検索条件拡張

--- a/views/orders/_dataTables.ejs
+++ b/views/orders/_dataTables.ejs
@@ -34,6 +34,14 @@
                             </select>
                         </div>
                         <div class="form-group bmd-form-group col-md-2">
+                            <label for="customerId" class="bmd-label-static">
+                                顧客
+                            </label>
+                            <select class="form-control" name="customerId"
+                                id="customerId" style="width: 100%;">
+                            </select>
+                        </div>
+                        <div class="form-group bmd-form-group col-md-2">
                             <label for="admin[id]" class="bmd-label-static">
                                 仲介
                             </label>
@@ -77,13 +85,6 @@
                                     カスタマーID
                                 </label>
                                 <input class="form-control" placeholder="ID" name="customer[id]" id="customer[id]" />
-                            </div>
-                            <div class="form-group bmd-form-group col-md-2">
-                                <label for="customer[name]" class="bmd-label-static">
-                                    カスタマー名称
-                                </label>
-                                <input class="form-control" placeholder="Name" name="customer[name]"
-                                    id="customer[name]" />
                             </div>
                             <div class="form-group bmd-form-group col-md-2">
                                 <label for="customer[email]" class="bmd-label-static">
