--- a/views/ownershipInfos/index.ejs
+++ b/views/ownershipInfos/index.ejs
@@ -18,9 +18,9 @@ OI-00
             <!--        Here you can write extra buttons/actions for the toolbar              -->
             <a class="btn btn-primary btn-ok" href="#">
                 <i class="material-icons">refresh</i> 更新</a>
-            <a class="btn btn-primary btn-link" data-toggle="collapse" href=".advanced" role="button"
+            <!-- <a class="btn btn-primary btn-link" data-toggle="collapse" href=".advanced" role="button"
                 aria-expanded="false">
-                <i class="material-icons">filter_list</i> 高度な検索</a>
+                <i class="material-icons">filter_list</i> 高度な検索</a> -->
         </div>
 
         <%- include('./_dataTables', {  }) %>
