- 顧客管理に連絡窓口編集を追加

--- a/views/customers/_dataTables.ejs
+++ b/views/customers/_dataTables.ejs
@@ -26,6 +26,7 @@
                             <th>名称</th>
                             <th>Tel</th>
                             <th>URL</th>
+                            <th>連絡窓口</th>
                             <th>追加特性</th>
                             <th></th>
                         </tr>
@@ -40,6 +41,11 @@
                                     $url$
                                     <i class=" material-icons" style="font-size: 1.2em;">open_in_new</i>
                                 </a></td>
+                            <td name="id__numContactPoint">
+                                <a href="javascript:void(0)" class="showContactPoint" data-id="$id$">
+                                    $numContactPoint$
+                                </a>
+                            </td>
                             <td name="id__additionalProperty">
                                 <a href="javascript:void(0)" class="showAdditionalProperty" data-id="$id$">
                                     表示
