- 注文CSVダウンロードを実装

--- a/views/orders/index.ejs
+++ b/views/orders/index.ejs
@@ -21,6 +21,8 @@ OR-00
             <a class="btn btn-primary btn-link" data-toggle="collapse" href=".advanced" role="button"
                 aria-expanded="false">
                 <i class="material-icons">filter_list</i> 高度な検索</a>
+            <a class="btn btn-primary btn-downloadCSV" href="#">
+                <i class="material-icons">download</i> CSV</a>
         </div>
 
         <%- include('./_dataTables', {  }) %>
